--- a/po/thus.pot
+++ b/po/thus.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-29 23:42+0200\n"
+"POT-Creation-Date: 2014-05-29 23:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1012,7 +1012,7 @@ msgid "Configuring hardware ..."
 msgstr ""
 
 #: src/installation/process.py:1511
-msgid "Configure hardware ..."
+msgid "Installing drivers ..."
 msgstr ""
 
 #: src/installation/process.py:1518
