--- a/po/ast.po
+++ b/po/ast.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Tornes Llume <l.lumex03.tornes@gmail.com>, 2013-2014
-# Tornes Llume <l.lumex03.tornes@gmail.com>, 2014
-# manjarolinux <philm@manjaro.org>, 2013
-# manjarolinux <philm@manjaro.org>, 2013-2014
-# Tornes Llume <l.lumex03.tornes@gmail.com>, 2013
+# Ḷḷumex03 <l.lumex03.tornes@gmail.com>, 2013-2014
+# Ḷḷumex03 <l.lumex03.tornes@gmail.com>, 2014
+# philm <philm@manjaro.org>, 2013
+# philm <philm@manjaro.org>, 2013-2014
+# Ḷḷumex03 <l.lumex03.tornes@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: manjaro-thus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-01 10:07+0200\n"
-"PO-Revision-Date: 2014-06-02 18:03+0000\n"
-"Last-Translator: Tornes Llume <l.lumex03.tornes@gmail.com>\n"
+"PO-Revision-Date: 2014-06-04 10:13+0000\n"
+"Last-Translator: Ḷḷumex03 <l.lumex03.tornes@gmail.com>\n"
 "Language-Team: Asturian (http://www.transifex.com/projects/p/manjaro-thus/language/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -676,7 +676,7 @@ msgid ""
 "Do you really want to proceed and delete all your content on your hard drive?\n"
 "\n"
 "%s"
-msgstr "¿De xuru quies siguir y desaniciar tolos contenidos del to discu duru?\n\n%s"
+msgstr "¿De xuru quies siguir y desaniciar tolos conteníos del to discu duru?\n\n%s"
 
 #: src/installation/automatic.py:211
 #, python-format
